<resources>
    <string name="app_name">VentaDeCortinas</string>
    <string name="Product">Product code: </string>
    <string name="Description">Description: </string>
    <string name="Cost">Cost Per Mts2: </string>
    <string name="Enter">ENTER THE ARTICLE </string>
    <string name="Hint_Product">Product code: </string>
    <string name="Hint_Description">Description: </string>
    <string name="Hint_Cost">Cost Per Mts2: </string>
    <string name="Code">Sales code</string>
    <string name="Date">Payment date</string>
    <string name="Value">Payment value</string>
    <string name="Register">register</string>
    <string name="Name">Name</string>
    <string name="Card">Identification card</string>
    <string name="Mail">Mail</string>
    <string name="Password">Password</string>
    <string name="Repeat">Repeat password</string>
    <string name="Register1">Register</string>
    <string name="Articles">Register Articles</string>
    <string name="ArticlesPayment">Register Articles-Payment</string>
    <string name="Payment">Register Payment</string>
    <string name="Sales">Consult Sales (Lists)</string>
    <string name="Login">Login</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="remember">remember password</string>
    <string name="loginn">login</string>
    <string name="Catalogue">Catalogue</string>
    <string name="Contact">contact seller</string>
    <string name="Options">seller options</string>
    <string name="Login1">Seller Login</string>
    <string name="Registration">Seller Registration</string>
    <string name="Hello">WELCOME</string>
    <string name="Error">Invalid username or password</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_action_settings">Setting</string>
    <string name="txt_action_logout">Logout</string>
    <string name="Sales1">Register Sales  - Consult (Lists) </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>