<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IniciarSesionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/logo" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/Mail"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Mail"
            android:inputType="textPersonName|textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/Password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPersonName|textPassword"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/remember"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtRetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/remember"
            android:inputType="textPersonName|textPassword"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Iniciar sesion"
            android:textSize="25sp"
            android:onClick="onIniSesion"/>
    </LinearLayout>

</LinearLayout>